<resources>
    <string name="app_name">ShootTraker</string>
    <string name="bottom_menu_new_game">New Game</string>
    <string name="bottom_menu_history">History</string>
    <string name="bottom_menu_info">Bluetooth</string>
    <string name="bluetooth_info_message">Temporary Page\nConnect Bluetooth</string>
    <string name="start_new_game">Start Shot</string>
    <string name="set_camera">Set Camera</string>
    <string name="take_picture">Take Picture</string>
    <string name="get_picture">Get Gallery</string>
    <string name="save_picture">Save</string>
    <string name="average_size">Shot Group Size</string>
    <string name="total_bullet">Bullet Count</string>
    <string name="network_error">Network Error</string>
    <string name="network_error_message">Check network connection state</string>
    <string name="reset_shot">Reset</string>
    <string name="save_shot">Save</string>

</resources>